# lidar-for-fuel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: cicd_deploy.yml  cicd_full.yml  cicd_light.yml
configs/: config.yaml
data/pointcloud/: test_data_0000_0000_LA93_IGN69.laz  test_semis_2022_0897_6577_LA93_IGN69_decimation.laz  test_semis_2024_0751_6690_LA93_IGN69.laz  test_semis_2024_0751_6690_LA93_IGN69_filter_trajectory_1311.laz  test_semis_2024_0751_6690_LA93_IGN69_filter_trajectory_1311_pretraited.laz
lidar_for_fuel/: _version.py  main_preprocessed.py  main_pretreatment.py
lidar_for_fuel/commons/: commons.py
lidar_for_fuel/preprocessed/: add_trajectory.py  download_dtm_from_geoplateforme.py  filter_outliers.py  filter_points_by_dimension_values.py  validate_lidar_file.py
lidar_for_fuel/pretreatment/: add_trajectory.py  download_dtm_from_geoplateforme.py  filter_deviation_day.py  filter_deviation_day_in_pointcloud.py  filter_points_by_date.py  filter_points_by_dimension_values.py  normalize_height_by_dtm.py  normalize_height_by_points.py  normalize_height_in_pointcloud.py  validate_lidar_file.py
scripts/: example_lauch_fPCpretreatment.sh  example_lauch_pretreatment.sh
test/preprocessed/: test_add_trajectory.py  test_download_dtm_from_geoplateforme.py  test_filter_by_dimension_values.py  test_filter_outliers.py  test_filter_points_by_date.py  test_normalize_height_by_points.py  test_validate_lidar_file.py
test/pretreatment/: test_add_trajectory.py  (+8 more)
(+4 files in other folders)
