[project]
name= "lidar_for_fuel"
dynamic = ["version"]
description = "Industrialization code R LidarForFuel"
readme = "README.md"
authors = [{ name = "Malvina Dupays", email = "malvina.dupays@ign.fr" }]

[tool.setuptools.dynamic]
version = { attr = "lidar_for_fuel._version.__version__" }
[tool.setuptools]
packages = ["lidar_for_fuel"]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.bat
  | data
)/
'''